@@ -27,6 +27,7 @@ import io.aeron.logbuffer.FrameDescriptor;
 import io.aeron.protocol.DataHeaderFlyweight;
 import org.agrona.BitUtil;
 import org.agrona.LangUtil;
+import org.agrona.collections.ArrayUtil;
 import org.agrona.concurrent.BackoffIdleStrategy;
 import org.agrona.concurrent.ControllableIdleStrategy;
 import org.agrona.concurrent.IdleStrategy;
@@ -54,15 +55,14 @@ import static org.agrona.SystemUtil.*;
 public class Configuration
 {
     /**
-     * Warn if the Aeron directory exists.
+     * Should the driver print its configuration on start to {@link System#out}.
      */
-    public static final String DIR_WARN_IF_EXISTS_PROP_NAME = "aeron.dir.warn.if.exists";
+    public static final String PRINT_CONFIGURATION_ON_START_PROP_NAME = "aeron.print.configuration";
 
     /**
      * Warn if the Aeron directory exists.
      */
-    public static final boolean DIR_WARN_IF_EXISTS =
-        "true".equalsIgnoreCase(getProperty(DIR_WARN_IF_EXISTS_PROP_NAME, "true"));
+    public static final String DIR_WARN_IF_EXISTS_PROP_NAME = "aeron.dir.warn.if.exists";
 
     /**
      * Should driver attempt to an immediate forced delete of {@link CommonContext#AERON_DIR_PROP_NAME} on start
@@ -71,36 +71,14 @@ public class Configuration
     public static final String DIR_DELETE_ON_START_PROP_NAME = "aeron.dir.delete.on.start";
 
     /**
-     * Should driver attempt to an immediate forced delete of {@link CommonContext#AERON_DIR_PROP_NAME} on start
-     * if it exists.
-     */
-    public static final boolean DIR_DELETE_ON_START =
-        "true".equalsIgnoreCase(getProperty(DIR_DELETE_ON_START_PROP_NAME, "false"));
-
-    /**
      * Should high resolution timer be used on Windows.
      */
     public static final String USE_WINDOWS_HIGH_RES_TIMER_PROP_NAME = "aeron.use.windows.high.res.timer";
 
     /**
-     * Should high resolution timer be used on Windows.
-     */
-    public static final boolean USE_WINDOWS_HIGH_RES_TIMER =
-        "true".equalsIgnoreCase(getProperty(USE_WINDOWS_HIGH_RES_TIMER_PROP_NAME, "false"));
-
-    /**
      * Property name for boolean value of term buffers should be created sparse.
      */
     public static final String TERM_BUFFER_SPARSE_FILE_PROP_NAME = "aeron.term.buffer.sparse.file";
-
-    /**
-     * Should term buffers be created as sparse files. Defaults to false.
-     * <p>
-     * If a platform supports sparse files then log buffer creation is faster with pages being allocated as
-     * needed. This can help for large numbers of channels/streams but can result in latency pauses.
-     */
-    public static final boolean TERM_BUFFER_SPARSE_FILE =
-        "true".equalsIgnoreCase(getProperty(TERM_BUFFER_SPARSE_FILE_PROP_NAME, "false"));
 
     /**
      * Property name for page size to align all files to.
@@ -113,20 +91,9 @@ public class Configuration
     public static final int FILE_PAGE_SIZE_DEFAULT = 4 * 1024;
 
     /**
-     * Page size for alignment of all files.
-     */
-    public static final int FILE_PAGE_SIZE = getSizeAsInt(FILE_PAGE_SIZE_PROP_NAME, FILE_PAGE_SIZE_DEFAULT);
-
-    /**
      * Property name for boolean value for if storage checks should be performed when allocating files.
      */
     public static final String PERFORM_STORAGE_CHECKS_PROP_NAME = "aeron.perform.storage.checks";
-
-    /**
-     * Should storage checks should be performed when allocating files.
-     */
-    public static final boolean PERFORM_STORAGE_CHECKS =
-        "true".equalsIgnoreCase(getProperty(PERFORM_STORAGE_CHECKS_PROP_NAME, "true"));
 
     /**
      * Length (in bytes) of the log buffers for publication terms.
@@ -149,12 +116,6 @@ public class Configuration
     public static final int TERM_BUFFER_IPC_LENGTH_DEFAULT = 64 * 1024 * 1024;
 
     /**
-     * IPC Term buffer length in bytes.
-     */
-    public static final int IPC_TERM_BUFFER_LENGTH = getSizeAsInt(
-        IPC_TERM_BUFFER_LENGTH_PROP_NAME, TERM_BUFFER_IPC_LENGTH_DEFAULT);
-
-    /**
      * Property name low file storage warning threshold.
      */
     public static final String LOW_FILE_STORE_WARNING_THRESHOLD_PROP_NAME = "aeron.low.file.store.warning.threshold";
@@ -163,12 +124,6 @@ public class Configuration
      * Default value for low file storage warning threshold.
      */
     public static final long LOW_FILE_STORE_WARNING_THRESHOLD_DEFAULT = TERM_BUFFER_LENGTH_DEFAULT * 10L;
-
-    /**
-     * Default value for low file storage warning threshold.
-     */
-    public static final long LOW_FILE_STORE_WARNING_THRESHOLD = getSizeAsLong(
-        LOW_FILE_STORE_WARNING_THRESHOLD_PROP_NAME, LOW_FILE_STORE_WARNING_THRESHOLD_DEFAULT);
 
     /**
      * Length (in bytes) of the conductor buffer for control commands from the clients to the media driver conductor.
@@ -181,12 +136,6 @@ public class Configuration
     public static final int CONDUCTOR_BUFFER_LENGTH_DEFAULT = (1024 * 1024) + RingBufferDescriptor.TRAILER_LENGTH;
 
     /**
-     * Conductor buffer length in bytes.
-     */
-    public static final int CONDUCTOR_BUFFER_LENGTH = getSizeAsInt(
-        CONDUCTOR_BUFFER_LENGTH_PROP_NAME, CONDUCTOR_BUFFER_LENGTH_DEFAULT);
-
-    /**
      * Length (in bytes) of the broadcast buffers from the media driver to the clients.
      */
     public static final String TO_CLIENTS_BUFFER_LENGTH_PROP_NAME = "aeron.clients.buffer.length";
@@ -195,12 +144,6 @@ public class Configuration
      * Default buffer length for broadcast buffers from the media driver and the clients.
      */
     public static final int TO_CLIENTS_BUFFER_LENGTH_DEFAULT = (1024 * 1024) + BroadcastBufferDescriptor.TRAILER_LENGTH;
-
-    /**
-     * Length for broadcast buffers from the media driver and the clients.
-     */
-    public static final int TO_CLIENTS_BUFFER_LENGTH = getSizeAsInt(
-        TO_CLIENTS_BUFFER_LENGTH_PROP_NAME, TO_CLIENTS_BUFFER_LENGTH_DEFAULT);
 
     /**
      * Property name for length of the error buffer for the system counters.
@@ -213,15 +156,6 @@ public class Configuration
     public static final int COUNTERS_VALUES_BUFFER_LENGTH_DEFAULT = 1024 * 1024;
 
     /**
-     * Length of the memory mapped buffers for the system counters file.
-     */
-    public static final int COUNTERS_VALUES_BUFFER_LENGTH = getSizeAsInt(
-        COUNTERS_VALUES_BUFFER_LENGTH_PROP_NAME, COUNTERS_VALUES_BUFFER_LENGTH_DEFAULT);
-
-    public static final int COUNTERS_METADATA_BUFFER_LENGTH =
-        COUNTERS_VALUES_BUFFER_LENGTH * (CountersReader.METADATA_LENGTH / CountersReader.COUNTER_LENGTH);
-
-    /**
      * Property name for length of the memory mapped buffer for the distinct error log.
      */
     public static final String ERROR_BUFFER_LENGTH_PROP_NAME = "aeron.error.buffer.length";
@@ -232,11 +166,6 @@ public class Configuration
     public static final int ERROR_BUFFER_LENGTH_DEFAULT = 1024 * 1024;
 
     /**
-     * Buffer length for the error buffer for the media driver.
-     */
-    public static final int ERROR_BUFFER_LENGTH = getSizeAsInt(
-        ERROR_BUFFER_LENGTH_PROP_NAME, ERROR_BUFFER_LENGTH_DEFAULT);
-    /**
      * Property name for length of the memory mapped buffer for the loss report buffer.
      */
     public static final String LOSS_REPORT_BUFFER_LENGTH_PROP_NAME = "aeron.loss.report.buffer.length";
@@ -245,12 +174,6 @@ public class Configuration
      * Default buffer length for the loss report buffer.
      */
     public static final int LOSS_REPORT_BUFFER_LENGTH_DEFAULT = 1024 * 1024;
-
-    /**
-     * Buffer length for the loss report buffer for the media driver.
-     */
-    public static final int LOSS_REPORT_BUFFER_LENGTH = getSizeAsInt(
-        LOSS_REPORT_BUFFER_LENGTH_PROP_NAME, LOSS_REPORT_BUFFER_LENGTH_DEFAULT);
 
     /**
      * Property name for length of the initial window which must be sufficient for Bandwidth Delay Produce (BDP).
@@ -302,12 +225,6 @@ public class Configuration
     public static final int SOCKET_RCVBUF_LENGTH_DEFAULT = 128 * 1024;
 
     /**
-     * SO_RCVBUF length, 0 means use OS default.
-     */
-    public static final int SOCKET_RCVBUF_LENGTH = getSizeAsInt(
-        SOCKET_RCVBUF_LENGTH_PROP_NAME, SOCKET_RCVBUF_LENGTH_DEFAULT);
-
-    /**
      * Property name for SO_SNDBUF setting on UDP sockets which must be sufficient for Bandwidth Delay Produce (BDP).
      */
     public static final String SOCKET_SNDBUF_LENGTH_PROP_NAME = "aeron.socket.so_sndbuf";
@@ -316,12 +233,6 @@ public class Configuration
      * Default SO_SNDBUF length.
      */
     public static final int SOCKET_SNDBUF_LENGTH_DEFAULT = 0;
-
-    /**
-     * SO_SNDBUF length, 0 means use OS default.
-     */
-    public static final int SOCKET_SNDBUF_LENGTH = getSizeAsInt(
-        SOCKET_SNDBUF_LENGTH_PROP_NAME, SOCKET_SNDBUF_LENGTH_DEFAULT);
 
     /**
      * Property name for IP_MULTICAST_TTL setting on UDP sockets.
@@ -334,12 +245,6 @@ public class Configuration
     public static final int SOCKET_MULTICAST_TTL_DEFAULT = 0;
 
     /**
-     * Multicast TTL value.
-     */
-    public static final int SOCKET_MULTICAST_TTL = getInteger(
-        SOCKET_MULTICAST_TTL_PROP_NAME, SOCKET_MULTICAST_TTL_DEFAULT);
-
-    /**
      * Property name for linger timeout after draining on {@link Publication}s.
      */
     public static final String PUBLICATION_LINGER_PROP_NAME = "aeron.publication.linger.timeout";
@@ -348,13 +253,6 @@ public class Configuration
      * Default time for {@link Publication}s to linger before cleanup in nanoseconds.
      */
     public static final long PUBLICATION_LINGER_DEFAULT_NS = TimeUnit.SECONDS.toNanos(5);
-
-    /**
-     * Time for {@link Publication}s to linger before cleanup in nanoseconds. This is the time a publication will
-     * wait around after draining to the network so that tail loss can be recovered.
-     */
-    public static final long PUBLICATION_LINGER_NS = getDurationInNanos(
-        PUBLICATION_LINGER_PROP_NAME, PUBLICATION_LINGER_DEFAULT_NS);
 
     /**
      * Property name for {@link Aeron} client liveness timeout.
@@ -367,12 +265,6 @@ public class Configuration
     public static final long CLIENT_LIVENESS_TIMEOUT_DEFAULT_NS = TimeUnit.MILLISECONDS.toNanos(5000);
 
     /**
-     * Timeout for client liveness in nanoseconds.
-     */
-    public static final long CLIENT_LIVENESS_TIMEOUT_NS = getDurationInNanos(
-        CLIENT_LIVENESS_TIMEOUT_PROP_NAME, CLIENT_LIVENESS_TIMEOUT_DEFAULT_NS);
-
-    /**
      * Property name for {@link Image} liveness timeout.
      */
     public static final String IMAGE_LIVENESS_TIMEOUT_PROP_NAME = "aeron.image.liveness.timeout";
@@ -383,32 +275,15 @@ public class Configuration
     public static final long IMAGE_LIVENESS_TIMEOUT_DEFAULT_NS = TimeUnit.SECONDS.toNanos(10);
 
     /**
-     * Timeout for {@link Image} liveness in nanoseconds.
-     */
-    public static final long IMAGE_LIVENESS_TIMEOUT_NS = getDurationInNanos(
-        IMAGE_LIVENESS_TIMEOUT_PROP_NAME, IMAGE_LIVENESS_TIMEOUT_DEFAULT_NS);
-
-    /**
      * Property name for window limit on {@link Publication} side.
      */
     public static final String PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME = "aeron.publication.term.window.length";
-
-    /**
-     * Publication term window length for flow control in bytes.
-     */
-    public static final int PUBLICATION_TERM_WINDOW_LENGTH = getSizeAsInt(PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME, 0);
 
     /**
      * Property name for window limit for IPC publications.
      */
     public static final String IPC_PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME =
         "aeron.ipc.publication.term.window.length";
-
-    /**
-     * IPC Publication term window length for flow control in bytes.
-     */
-    public static final int IPC_PUBLICATION_TERM_WINDOW_LENGTH = getSizeAsInt(
-        IPC_PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME, 0);
 
     /**
      * Property name for {@link Publication} unblock timeout.
@@ -421,12 +296,6 @@ public class Configuration
     public static final long PUBLICATION_UNBLOCK_TIMEOUT_DEFAULT_NS = TimeUnit.SECONDS.toNanos(10);
 
     /**
-     * Publication timeout for when to unblock a partially written message.
-     */
-    public static final long PUBLICATION_UNBLOCK_TIMEOUT_NS = getDurationInNanos(
-        PUBLICATION_UNBLOCK_TIMEOUT_PROP_NAME, PUBLICATION_UNBLOCK_TIMEOUT_DEFAULT_NS);
-
-    /**
      * Property name for {@link Publication} connection timeout.
      */
     public static final String PUBLICATION_CONNECTION_TIMEOUT_PROP_NAME = "aeron.publication.connection.timeout";
@@ -437,22 +306,13 @@ public class Configuration
     public static final long PUBLICATION_CONNECTION_TIMEOUT_DEFAULT_NS = TimeUnit.SECONDS.toNanos(5);
 
     /**
-     * Publication timeout for when to indicate no connection from lack of status messages.
-     */
-    public static final long PUBLICATION_CONNECTION_TIMEOUT_NS = getDurationInNanos(
-        PUBLICATION_CONNECTION_TIMEOUT_PROP_NAME, PUBLICATION_CONNECTION_TIMEOUT_DEFAULT_NS);
-
-    /**
      * Property name for if spy subscriptions simulate a connection.
      */
     public static final String SPIES_SIMULATE_CONNECTION_PROP_NAME = "aeron.spies.simulate.connection";
 
     /**
-     * Should a spy subscription simulate a connection to a network publication.
+     * Default idle strategy for agents.
      */
-    public static final boolean SPIES_SIMULATE_CONNECTION =
-        "true".equalsIgnoreCase(getProperty(SPIES_SIMULATE_CONNECTION_PROP_NAME, "false"));
-
     private static final String DEFAULT_IDLE_STRATEGY = "org.agrona.concurrent.BackoffIdleStrategy";
 
     /**
@@ -485,34 +345,15 @@ public class Configuration
     public static final String SENDER_IDLE_STRATEGY_PROP_NAME = "aeron.sender.idle.strategy";
 
     /**
-     * {@link IdleStrategy} to be employed by {@link Sender} for {@link ThreadingMode#DEDICATED}.
-     */
-    public static final String SENDER_IDLE_STRATEGY = getProperty(
-        SENDER_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY);
-
-    /**
      * Property name for {@link IdleStrategy} to be employed by {@link DriverConductor} for
      * {@link ThreadingMode#DEDICATED} and {@link ThreadingMode#SHARED_NETWORK}.
      */
     public static final String CONDUCTOR_IDLE_STRATEGY_PROP_NAME = "aeron.conductor.idle.strategy";
 
     /**
-     * {@link IdleStrategy} to be employed by {@link DriverConductor} for {@link ThreadingMode#DEDICATED}
-     * and {@link ThreadingMode#SHARED_NETWORK}.
-     */
-    public static final String CONDUCTOR_IDLE_STRATEGY = getProperty(
-        CONDUCTOR_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY);
-
-    /**
      * Property name for {@link IdleStrategy} to be employed by {@link Receiver} for {@link ThreadingMode#DEDICATED}.
      */
     public static final String RECEIVER_IDLE_STRATEGY_PROP_NAME = "aeron.receiver.idle.strategy";
-
-    /**
-     * {@link IdleStrategy} to be employed by {@link Receiver} for {@link ThreadingMode#DEDICATED}.
-     */
-    public static final String RECEIVER_IDLE_STRATEGY = getProperty(
-        RECEIVER_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY);
 
     /**
      * Property name for {@link IdleStrategy} to be employed by {@link Sender} and {@link Receiver} for
@@ -521,24 +362,10 @@ public class Configuration
     public static final String SHARED_NETWORK_IDLE_STRATEGY_PROP_NAME = "aeron.sharednetwork.idle.strategy";
 
     /**
-     * {@link IdleStrategy} to be employed by {@link Sender} and {@link Receiver} for
-     * {@link ThreadingMode#SHARED_NETWORK}.
-     */
-    public static final String SHARED_NETWORK_IDLE_STRATEGY = getProperty(
-        SHARED_NETWORK_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY);
-
-    /**
      * Property name for {@link IdleStrategy} to be employed by {@link Sender}, {@link Receiver},
      * and {@link DriverConductor} for {@link ThreadingMode#SHARED}.
      */
     public static final String SHARED_IDLE_STRATEGY_PROP_NAME = "aeron.shared.idle.strategy";
-
-    /**
-     * {@link IdleStrategy} to be employed by {@link Sender}, {@link Receiver}, and {@link DriverConductor}
-     * for {@link ThreadingMode#SHARED}.
-     */
-    public static final String SHARED_IDLE_STRATEGY = getProperty(
-        SHARED_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY);
 
     /**
      * Property name for {@link FlowControl} to be employed for unicast channels.
@@ -568,22 +395,10 @@ public class Configuration
     public static final String UNICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME = "aeron.unicast.FlowControl.supplier";
 
     /**
-     * {@link FlowControlSupplier} to be employed for unicast channels.
-     */
-    public static final String UNICAST_FLOW_CONTROL_STRATEGY_SUPPLIER = getProperty(
-        UNICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME, "io.aeron.driver.DefaultUnicastFlowControlSupplier");
-
-    /**
      * Property name for {@link FlowControlSupplier} to be employed for unicast channels.
      */
     public static final String MULTICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME =
         "aeron.multicast.FlowControl.supplier";
-
-    /**
-     * {@link FlowControlSupplier} to be employed for multicast channels.
-     */
-    public static final String MULTICAST_FLOW_CONTROL_STRATEGY_SUPPLIER = getProperty(
-        MULTICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME, "io.aeron.driver.DefaultMulticastFlowControlSupplier");
 
     /**
      * Maximum UDP datagram payload size for IPv4. Jumbo datagrams from IPv6 are not supported.
@@ -608,30 +423,14 @@ public class Configuration
     public static final int MTU_LENGTH_DEFAULT = 1408;
 
     /**
-     * Length of the MTU to use for sending messages.
-     */
-    public static final int MTU_LENGTH = getSizeAsInt(MTU_LENGTH_PROP_NAME, MTU_LENGTH_DEFAULT);
-
-    /**
      * Length of the maximum transmission unit of the media driver's protocol for IPC.
      */
     public static final String IPC_MTU_LENGTH_PROP_NAME = "aeron.ipc.mtu.length";
 
     /**
-     * Length of the MTU to use for sending messages via IPC
-     */
-    public static final int IPC_MTU_LENGTH = getSizeAsInt(IPC_MTU_LENGTH_PROP_NAME, MTU_LENGTH_DEFAULT);
-
-    /**
      * {@link ThreadingMode} to be used by the Aeron {@link MediaDriver}.
      */
     public static final String THREADING_MODE_PROP_NAME = "aeron.threading.mode";
-
-    /**
-     * {@link ThreadingMode} default used by the media driver unless overridden in context.
-     */
-    public static final ThreadingMode THREADING_MODE_DEFAULT = ThreadingMode.valueOf(
-        getProperty(THREADING_MODE_PROP_NAME, DEDICATED.name()));
 
     /**
      * Interval in between checks for timers and timeouts.
@@ -644,18 +443,12 @@ public class Configuration
     public static final long DEFAULT_TIMER_INTERVAL_NS = TimeUnit.SECONDS.toNanos(1);
 
     /**
-     * How often to check liveness and cleanup timers in nanoseconds.
-     */
-    public static final long TIMER_INTERVAL_NS = getDurationInNanos(
-        TIMER_INTERVAL_PROP_NAME, DEFAULT_TIMER_INTERVAL_NS);
-
-    /**
-     *  Timeout between a counter being freed and being reused.
+     *  Timeout between a counter being freed and being available to be reused.
      */
     public static final String COUNTER_FREE_TO_REUSE_TIMEOUT_PROP_NAME = "aeron.counters.free.to.reuse.timeout";
 
     /**
-     *  Timeout between a counter being freed and being reused
+     *  Timeout between a counter being freed and being available to be reused.
      */
     public static final long DEFAULT_COUNTER_FREE_TO_REUSE_TIMEOUT_NS = TimeUnit.SECONDS.toNanos(1);
 
@@ -665,21 +458,9 @@ public class Configuration
     public static final String SEND_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME = "aeron.SendChannelEndpoint.supplier";
 
     /**
-     * {@link SendChannelEndpointSupplier} to provide endpoint extension behaviour.
-     */
-    public static final String SEND_CHANNEL_ENDPOINT_SUPPLIER = getProperty(
-        SEND_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME, "io.aeron.driver.DefaultSendChannelEndpointSupplier");
-
-    /**
      * Property name for {@link ReceiveChannelEndpointSupplier}.
      */
     public static final String RECEIVE_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME = "aeron.ReceiveChannelEndpoint.supplier";
-
-    /**
-     * {@link ReceiveChannelEndpointSupplier} to provide endpoint extension behaviour.
-     */
-    public static final String RECEIVE_CHANNEL_ENDPOINT_SUPPLIER = getProperty(
-        RECEIVE_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME, "io.aeron.driver.DefaultReceiveChannelEndpointSupplier");
 
     /**
      * Property name for Application Specific Feedback added to Status Messages by the driver for flow control.
@@ -688,55 +469,31 @@ public class Configuration
         "aeron.flow.control.sm.applicationSpecificFeedback";
 
     /**
-     * Value to use for all Status Message Application Specific Feedback values from the driver for flow control.
-     */
-    public static final byte[] SM_APPLICATION_SPECIFIC_FEEDBACK = fromHex(getProperty(
-        SM_APPLICATION_SPECIFIC_FEEDBACK_PROP_NAME, ""));
-
-    /**
      * Property name for {@link CongestionControlSupplier} to be employed for receivers.
      */
     public static final String CONGESTION_CONTROL_STRATEGY_SUPPLIER_PROP_NAME = "aeron.CongestionControl.supplier";
 
     /**
-     * {@link CongestionControlSupplier} to be employed for receivers.
-     */
-    public static final String CONGESTION_CONTROL_STRATEGY_SUPPLIER = getProperty(
-        CONGESTION_CONTROL_STRATEGY_SUPPLIER_PROP_NAME, "io.aeron.driver.DefaultCongestionControlSupplier");
-
-    /**
-     * Property name for low end of the publication reserved session id range which will not be automatically assigned.
+     * Property name for low end of the publication reserved session-id range which will not be automatically assigned.
      */
     public static final String PUBLICATION_RESERVED_SESSION_ID_LOW_PROP_NAME =
         "aeron.publication.reserved.session.id.low";
 
     /**
-     * Low end of the publication reserved session id range which will not be automatically assigned.
+     * Low end of the publication reserved session-id range which will not be automatically assigned.
      */
     public static final int PUBLICATION_RESERVED_SESSION_ID_LOW_DEFAULT = -1;
 
     /**
-     * Low end of the publication reserved session id range which will not be automatically assigned.
-     */
-    public static final int PUBLICATION_RESERVED_SESSION_ID_LOW = getInteger(
-        PUBLICATION_RESERVED_SESSION_ID_LOW_PROP_NAME, PUBLICATION_RESERVED_SESSION_ID_LOW_DEFAULT);
-
-    /**
-     * Property name for high end of the publication reserved session id range which will not be automatically assigned.
+     * Property name for high end of the publication reserved session-id range which will not be automatically assigned.
      */
     public static final String PUBLICATION_RESERVED_SESSION_ID_HIGH_PROP_NAME =
         "aeron.publication.reserved.session.id.high";
 
     /**
-     * High end of the publication reserved session id range which will not be automatically assigned.
+     * High end of the publication reserved session-id range which will not be automatically assigned.
      */
     public static final int PUBLICATION_RESERVED_SESSION_ID_HIGH_DEFAULT = 1000;
-
-    /**
-     * High end of the publication reserved session id range which will not be automatically assigned.
-     */
-    public static final int PUBLICATION_RESERVED_SESSION_ID_HIGH = getInteger(
-        PUBLICATION_RESERVED_SESSION_ID_HIGH_PROP_NAME, PUBLICATION_RESERVED_SESSION_ID_HIGH_DEFAULT);
 
     /**
      * Limit for the number of commands drained in one operation.
@@ -749,12 +506,12 @@ public class Configuration
     public static final int CMD_QUEUE_CAPACITY = 256;
 
     /**
-     * Timeout on cleaning up pending SETUP state on subscriber.
+     * Timeout on cleaning up pending SETUP message state on subscriber.
      */
     public static final long PENDING_SETUPS_TIMEOUT_NS = TimeUnit.MILLISECONDS.toNanos(1000);
 
     /**
-     * Timeout between SETUP frames for publications during initial setup phase.
+     * Timeout between SETUP messages for publications during initial setup phase.
      */
     public static final long PUBLICATION_SETUP_TIMEOUT_NS = TimeUnit.MILLISECONDS.toNanos(100);
 
@@ -764,25 +521,29 @@ public class Configuration
     public static final long PUBLICATION_HEARTBEAT_TIMEOUT_NS = TimeUnit.MILLISECONDS.toNanos(100);
 
     /**
-     * Default group size estimate for NAK delay randomisation.
+     * Expected size of multicast receiver groups property name.
      */
-    public static final int NAK_GROUPSIZE_DEFAULT = 10;
+    public static final String NAK_MULTICAST_GROUP_SIZE_PROP_NAME = "aeron.nak.multicast.group.size";
 
     /**
-     * Default group RTT estimate for NAK delay randomization in milliseconds.
+     * Default multicast receiver group size estimate for NAK delay randomisation.
      */
-    public static final int NAK_GRTT_DEFAULT = 10;
+    public static final int NAK_MULTICAST_GROUP_SIZE_DEFAULT = 10;
 
     /**
-     * Default max backoff for NAK delay randomisation in milliseconds.
+     * Max backoff time for multicast NAK delay randomisation in nanoseconds.
      */
-    public static final long NAK_MAX_BACKOFF_DEFAULT = TimeUnit.MILLISECONDS.toNanos(60);
+    public static final String NAK_MULTICAST_MAX_BACKOFF_PROP_NAME = "aeron.nak.multicast.max.backoff";
 
     /**
-     * Multicast NAK delay is immediate initial with delayed subsequent delay.
+     * Default max backoff for NAK delay randomisation in nanoseconds.
      */
-    public static final OptimalMulticastDelayGenerator NAK_MULTICAST_DELAY_GENERATOR =
-        new OptimalMulticastDelayGenerator(NAK_MAX_BACKOFF_DEFAULT, NAK_GROUPSIZE_DEFAULT, NAK_GRTT_DEFAULT);
+    public static final long NAK_MAX_BACKOFF_DEFAULT_NS = TimeUnit.MILLISECONDS.toNanos(60);
+
+    /**
+     * Unicast NAK delay in nanoseconds property name.
+     */
+    public static final String NAK_UNICAST_DELAY_PROP_NAME = "aeron.nak.unicast.delay";
 
     /**
      * Default Unicast NAK delay in nanoseconds.
@@ -790,10 +551,9 @@ public class Configuration
     public static final long NAK_UNICAST_DELAY_DEFAULT_NS = TimeUnit.MILLISECONDS.toNanos(60);
 
     /**
-     * Unicast NAK delay is immediate initial with delayed subsequent delay.
+     * Property for setting how long to delay before sending a retransmit following a NAK.
      */
-    public static final StaticDelayGenerator NAK_UNICAST_DELAY_GENERATOR = new StaticDelayGenerator(
-        NAK_UNICAST_DELAY_DEFAULT_NS, true);
+    public static final String RETRANSMIT_UNICAST_DELAY_PROP_NAME = "aeron.retransmit.unicast.delay";
 
     /**
      * Default delay before retransmission of data for unicast in nanoseconds.
@@ -801,10 +561,9 @@ public class Configuration
     public static final long RETRANSMIT_UNICAST_DELAY_DEFAULT_NS = TimeUnit.NANOSECONDS.toNanos(0);
 
     /**
-     * Source uses same for unicast and multicast. For ticks.
+     * Property for setting how long to linger after delay on a NAK.
      */
-    public static final FeedbackDelayGenerator RETRANSMIT_UNICAST_DELAY_GENERATOR =
-        () -> RETRANSMIT_UNICAST_DELAY_DEFAULT_NS;
+    public static final String RETRANSMIT_UNICAST_LINGER_PROP_NAME = "aeron.retransmit.unicast.linger";
 
     /**
      * Default delay for linger for unicast in nanoseconds.
@@ -812,61 +571,117 @@ public class Configuration
     public static final long RETRANSMIT_UNICAST_LINGER_DEFAULT_NS = TimeUnit.MILLISECONDS.toNanos(60);
 
     /**
-     * Delay for linger for unicast.
-     */
-    public static final FeedbackDelayGenerator RETRANSMIT_UNICAST_LINGER_GENERATOR =
-        () -> RETRANSMIT_UNICAST_LINGER_DEFAULT_NS;
-
-    /**
      * Default max number of active retransmissions per connected stream.
      */
     public static final int MAX_RETRANSMITS_DEFAULT = 16;
 
-    /**
-     * How far ahead the publisher can get from the sender position.
-     *
-     * @param termBufferLength to be used when {@link #PUBLICATION_TERM_WINDOW_LENGTH} is not set.
-     * @return the length to be used for the publication window.
-     */
-    public static int publicationTermWindowLength(final int termBufferLength)
+    public static boolean printConfigurationOnStart()
     {
-        int publicationTermWindowLength = termBufferLength / 2;
+        return "true".equalsIgnoreCase(getProperty(PRINT_CONFIGURATION_ON_START_PROP_NAME, "false"));
+    }
 
-        if (0 != PUBLICATION_TERM_WINDOW_LENGTH)
-        {
-            publicationTermWindowLength = Math.min(PUBLICATION_TERM_WINDOW_LENGTH, publicationTermWindowLength);
-        }
+    public static boolean useWindowsHighResTimer()
+    {
+        return "true".equalsIgnoreCase(getProperty(USE_WINDOWS_HIGH_RES_TIMER_PROP_NAME, "false"));
+    }
 
-        return publicationTermWindowLength;
+    public static boolean warnIfDirExists()
+    {
+        return "true".equalsIgnoreCase(getProperty(DIR_WARN_IF_EXISTS_PROP_NAME, "true"));
+    }
+
+    public static boolean dirDeleteOnStart()
+    {
+        return "true".equalsIgnoreCase(getProperty(DIR_DELETE_ON_START_PROP_NAME, "false"));
+    }
+
+    public static boolean termBufferSparseFile()
+    {
+        return "true".equalsIgnoreCase(getProperty(TERM_BUFFER_SPARSE_FILE_PROP_NAME, "false"));
+    }
+
+    public static boolean performStorageChecks()
+    {
+        return "true".equalsIgnoreCase(getProperty(PERFORM_STORAGE_CHECKS_PROP_NAME, "true"));
+    }
+
+    public static boolean spiesSimulateConnection()
+    {
+        return "true".equalsIgnoreCase(getProperty(SPIES_SIMULATE_CONNECTION_PROP_NAME, "false"));
+    }
+
+    public static int conductorBufferLength()
+    {
+        return getSizeAsInt(CONDUCTOR_BUFFER_LENGTH_PROP_NAME, CONDUCTOR_BUFFER_LENGTH_DEFAULT);
+    }
+
+    public static int toClientsBufferLength()
+    {
+        return getSizeAsInt(TO_CLIENTS_BUFFER_LENGTH_PROP_NAME, TO_CLIENTS_BUFFER_LENGTH_DEFAULT);
+    }
+
+    public static int counterValuesBufferLength()
+    {
+        return getSizeAsInt(COUNTERS_VALUES_BUFFER_LENGTH_PROP_NAME, COUNTERS_VALUES_BUFFER_LENGTH_DEFAULT);
+    }
+
+    public static int errorBufferLength()
+    {
+        return getSizeAsInt(ERROR_BUFFER_LENGTH_PROP_NAME, ERROR_BUFFER_LENGTH_DEFAULT);
+    }
+
+    public static int nakMulticastGroupSize()
+    {
+        return getInteger(NAK_MULTICAST_GROUP_SIZE_PROP_NAME, NAK_MULTICAST_GROUP_SIZE_DEFAULT);
+    }
+
+    public static long nakMulticastMaxBackoffNs()
+    {
+        return getDurationInNanos(NAK_MULTICAST_MAX_BACKOFF_PROP_NAME, NAK_MAX_BACKOFF_DEFAULT_NS);
+    }
+
+    public static long nakUnicastDelayNs()
+    {
+        return getDurationInNanos(NAK_UNICAST_DELAY_PROP_NAME, NAK_UNICAST_DELAY_DEFAULT_NS);
+    }
+
+    public static long timerIntervalNs()
+    {
+        return getDurationInNanos(TIMER_INTERVAL_PROP_NAME, DEFAULT_TIMER_INTERVAL_NS);
+    }
+
+    public static long lowStorageWarningThreshold()
+    {
+        return getSizeAsLong(LOW_FILE_STORE_WARNING_THRESHOLD_PROP_NAME, LOW_FILE_STORE_WARNING_THRESHOLD_DEFAULT);
+    }
+
+    public static int publicationTermWindowLength()
+    {
+        return getSizeAsInt(PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME, 0);
+    }
+
+    public static int ipcPublicationTermWindowLength()
+    {
+        return getSizeAsInt(IPC_PUBLICATION_TERM_WINDOW_LENGTH_PROP_NAME, 0);
     }
 
     /**
-     * How far ahead the publisher can get from the minimum subscriber position for IPC only.
+     * How far ahead a producer can get from a consumer position.
      *
-     * @param termBufferLength to be used when {@link #IPC_PUBLICATION_TERM_WINDOW_LENGTH} is not set.
-     * @return the length to be used for the publication window.
+     * @param termBufferLength        for when default is not set and considering an appropriate minimum.
+     * @param defaultTermWindowLength to take priority.
+     * @return the length to be used for the producer window.
      */
-    public static int ipcPublicationTermWindowLength(final int termBufferLength)
+    public static int producerWindowLength(final int termBufferLength, final int defaultTermWindowLength)
     {
-        int publicationTermWindowLength = termBufferLength;
+        int termWindowLength = termBufferLength / 2;
 
-        if (0 != IPC_PUBLICATION_TERM_WINDOW_LENGTH)
+        if (0 != defaultTermWindowLength)
         {
-            publicationTermWindowLength = Math.min(IPC_PUBLICATION_TERM_WINDOW_LENGTH, publicationTermWindowLength);
+            termWindowLength = Math.min(defaultTermWindowLength, termWindowLength);
         }
 
-        return publicationTermWindowLength;
-    }
-
-    /**
-     * How large the term buffer should be for IPC only.
-     *
-     * @param termBufferLength to be used when {@link #IPC_TERM_BUFFER_LENGTH} is not set.
-     * @return the length to be used for the term buffer in bytes
-     */
-    public static int ipcTermBufferLength(final int termBufferLength)
-    {
-        return 0 != IPC_TERM_BUFFER_LENGTH ? IPC_TERM_BUFFER_LENGTH : termBufferLength;
+        return termWindowLength;
     }
 
     /**
@@ -907,54 +722,166 @@ public class Configuration
         return idleStrategy;
     }
 
-    static IdleStrategy senderIdleStrategy(final StatusIndicator controllableStatus)
+    public static IdleStrategy senderIdleStrategy(final StatusIndicator controllableStatus)
     {
-        return agentIdleStrategy(SENDER_IDLE_STRATEGY, controllableStatus);
+        return agentIdleStrategy(
+            getProperty(SENDER_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY), controllableStatus);
     }
 
-    static IdleStrategy conductorIdleStrategy(final StatusIndicator controllableStatus)
+    public static IdleStrategy conductorIdleStrategy(final StatusIndicator controllableStatus)
     {
-        return agentIdleStrategy(CONDUCTOR_IDLE_STRATEGY, controllableStatus);
+        return agentIdleStrategy(
+            getProperty(CONDUCTOR_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY), controllableStatus);
     }
 
-    static IdleStrategy receiverIdleStrategy(final StatusIndicator controllableStatus)
+    public static IdleStrategy receiverIdleStrategy(final StatusIndicator controllableStatus)
     {
-        return agentIdleStrategy(RECEIVER_IDLE_STRATEGY, controllableStatus);
+        return agentIdleStrategy(
+            getProperty(RECEIVER_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY), controllableStatus);
     }
 
-    static IdleStrategy sharedNetworkIdleStrategy(final StatusIndicator controllableStatus)
+    public static IdleStrategy sharedNetworkIdleStrategy(final StatusIndicator controllableStatus)
     {
-        return agentIdleStrategy(SHARED_NETWORK_IDLE_STRATEGY, controllableStatus);
+        return agentIdleStrategy(
+            getProperty(SHARED_NETWORK_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY), controllableStatus);
     }
 
-    static IdleStrategy sharedIdleStrategy(final StatusIndicator controllableStatus)
+    public static IdleStrategy sharedIdleStrategy(final StatusIndicator controllableStatus)
     {
-        return agentIdleStrategy(SHARED_IDLE_STRATEGY, controllableStatus);
+        return agentIdleStrategy(
+            getProperty(SHARED_IDLE_STRATEGY_PROP_NAME, DEFAULT_IDLE_STRATEGY), controllableStatus);
     }
 
-    static int termBufferLength()
+    public static int termBufferLength()
     {
         return getSizeAsInt(TERM_BUFFER_LENGTH_PROP_NAME, TERM_BUFFER_LENGTH_DEFAULT);
     }
 
-    static int initialWindowLength()
+    public static int ipcTermBufferLength()
+    {
+        return getSizeAsInt(IPC_TERM_BUFFER_LENGTH_PROP_NAME, TERM_BUFFER_IPC_LENGTH_DEFAULT);
+    }
+
+    public static int initialWindowLength()
     {
         return getSizeAsInt(INITIAL_WINDOW_LENGTH_PROP_NAME, INITIAL_WINDOW_LENGTH_DEFAULT);
     }
 
-    static long statusMessageTimeout()
+    public static int socketMulticastTtl()
+    {
+        return getInteger(SOCKET_MULTICAST_TTL_PROP_NAME, SOCKET_MULTICAST_TTL_DEFAULT);
+    }
+
+    public static int socketSndbufLength()
+    {
+        return getSizeAsInt(SOCKET_SNDBUF_LENGTH_PROP_NAME, SOCKET_SNDBUF_LENGTH_DEFAULT);
+    }
+
+    public static int socketRcvbufLength()
+    {
+        return getSizeAsInt(SOCKET_RCVBUF_LENGTH_PROP_NAME, SOCKET_RCVBUF_LENGTH_DEFAULT);
+    }
+
+    public static int mtuLength()
+    {
+        return getSizeAsInt(MTU_LENGTH_PROP_NAME, MTU_LENGTH_DEFAULT);
+    }
+
+    public static int ipcMtuLength()
+    {
+        return getSizeAsInt(IPC_MTU_LENGTH_PROP_NAME, MTU_LENGTH_DEFAULT);
+    }
+
+    public static int filePageSize()
+    {
+        return getSizeAsInt(FILE_PAGE_SIZE_PROP_NAME, FILE_PAGE_SIZE_DEFAULT);
+    }
+
+    public static int publicationReservedSessionIdLow()
+    {
+        return getInteger(PUBLICATION_RESERVED_SESSION_ID_LOW_PROP_NAME, PUBLICATION_RESERVED_SESSION_ID_LOW_DEFAULT);
+    }
+
+    public static int publicationReservedSessionIdHigh()
+    {
+        return getInteger(PUBLICATION_RESERVED_SESSION_ID_HIGH_PROP_NAME, PUBLICATION_RESERVED_SESSION_ID_HIGH_DEFAULT);
+    }
+
+    public static long statusMessageTimeoutNs()
     {
         return getDurationInNanos(STATUS_MESSAGE_TIMEOUT_PROP_NAME, STATUS_MESSAGE_TIMEOUT_DEFAULT_NS);
     }
 
-    static int sendToStatusMessagePollRatio()
+    public static int sendToStatusMessagePollRatio()
     {
         return getInteger(SEND_TO_STATUS_POLL_RATIO_PROP_NAME, SEND_TO_STATUS_POLL_RATIO_DEFAULT);
     }
 
-    static long counterFreeToReuseTimeout()
+    public static long counterFreeToReuseTimeoutNs()
     {
         return getDurationInNanos(COUNTER_FREE_TO_REUSE_TIMEOUT_PROP_NAME, DEFAULT_COUNTER_FREE_TO_REUSE_TIMEOUT_NS);
+    }
+
+    public static long clientLivenessTimeoutNs()
+    {
+        return getDurationInNanos(CLIENT_LIVENESS_TIMEOUT_PROP_NAME, CLIENT_LIVENESS_TIMEOUT_DEFAULT_NS);
+    }
+
+    public static long imageLivenessTimeoutNs()
+    {
+        return getDurationInNanos(IMAGE_LIVENESS_TIMEOUT_PROP_NAME, IMAGE_LIVENESS_TIMEOUT_DEFAULT_NS);
+    }
+
+    public static long publicationUnlockTimeoutNs()
+    {
+        return getDurationInNanos(PUBLICATION_UNBLOCK_TIMEOUT_PROP_NAME, PUBLICATION_UNBLOCK_TIMEOUT_DEFAULT_NS);
+    }
+
+    public static long publicationConnectionTimeoutNs()
+    {
+        return getDurationInNanos(PUBLICATION_CONNECTION_TIMEOUT_PROP_NAME, PUBLICATION_CONNECTION_TIMEOUT_DEFAULT_NS);
+    }
+
+    public static long publicationLingerTimeoutNs()
+    {
+        return getDurationInNanos(PUBLICATION_LINGER_PROP_NAME, PUBLICATION_LINGER_DEFAULT_NS);
+    }
+
+    public static long retransmitUnicastDelayNs()
+    {
+        return getDurationInNanos(RETRANSMIT_UNICAST_DELAY_PROP_NAME, RETRANSMIT_UNICAST_DELAY_DEFAULT_NS);
+    }
+
+    public static long retransmitUnicastLingerNs()
+    {
+        return getDurationInNanos(RETRANSMIT_UNICAST_LINGER_PROP_NAME, RETRANSMIT_UNICAST_LINGER_DEFAULT_NS);
+    }
+
+    public static int lossReportBufferLength()
+    {
+        return getSizeAsInt(LOSS_REPORT_BUFFER_LENGTH_PROP_NAME, LOSS_REPORT_BUFFER_LENGTH_DEFAULT);
+    }
+
+    public static ThreadingMode threadingMode()
+    {
+        final String propertyValue = getProperty(THREADING_MODE_PROP_NAME);
+        if (null == propertyValue)
+        {
+            return DEDICATED;
+        }
+
+        return ThreadingMode.valueOf(propertyValue);
+    }
+
+    public static byte[] applicationSpecificFeedback()
+    {
+        final String propertyValue = getProperty(SM_APPLICATION_SPECIFIC_FEEDBACK_PROP_NAME);
+        if (null == propertyValue)
+        {
+            return ArrayUtil.EMPTY_BYTE_ARRAY;
+        }
+
+        return fromHex(propertyValue);
     }
 
     /**
@@ -963,14 +890,18 @@ public class Configuration
      *
      * @return the {@link SendChannelEndpointSupplier}.
      */
-    static SendChannelEndpointSupplier sendChannelEndpointSupplier()
+    public static SendChannelEndpointSupplier sendChannelEndpointSupplier()
     {
         SendChannelEndpointSupplier supplier = null;
         try
         {
-            supplier = (SendChannelEndpointSupplier)Class.forName(SEND_CHANNEL_ENDPOINT_SUPPLIER)
-                .getConstructor()
-                .newInstance();
+            final String className = getProperty(SEND_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME);
+            if (null == className)
+            {
+                return new DefaultSendChannelEndpointSupplier();
+            }
+
+            supplier = (SendChannelEndpointSupplier)Class.forName(className).getConstructor().newInstance();
         }
         catch (final Exception ex)
         {
@@ -986,14 +917,18 @@ public class Configuration
      *
      * @return the {@link SendChannelEndpointSupplier}.
      */
-    static ReceiveChannelEndpointSupplier receiveChannelEndpointSupplier()
+    public static ReceiveChannelEndpointSupplier receiveChannelEndpointSupplier()
     {
         ReceiveChannelEndpointSupplier supplier = null;
         try
         {
-            supplier = (ReceiveChannelEndpointSupplier)Class.forName(RECEIVE_CHANNEL_ENDPOINT_SUPPLIER)
-                .getConstructor()
-                .newInstance();
+            final String className = getProperty(RECEIVE_CHANNEL_ENDPOINT_SUPPLIER_PROP_NAME);
+            if (null == className)
+            {
+                return new DefaultReceiveChannelEndpointSupplier();
+            }
+
+            supplier = (ReceiveChannelEndpointSupplier)Class.forName(className).getConstructor().newInstance();
         }
         catch (final Exception ex)
         {
@@ -1009,14 +944,18 @@ public class Configuration
      *
      * @return the {@link FlowControlSupplier}.
      */
-    static FlowControlSupplier unicastFlowControlSupplier()
+    public static FlowControlSupplier unicastFlowControlSupplier()
     {
         FlowControlSupplier supplier = null;
         try
         {
-            supplier = (FlowControlSupplier)Class.forName(UNICAST_FLOW_CONTROL_STRATEGY_SUPPLIER)
-                .getConstructor()
-                .newInstance();
+            final String className = getProperty(UNICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME);
+            if (null == className)
+            {
+                return new DefaultUnicastFlowControlSupplier();
+            }
+
+            supplier = (FlowControlSupplier)Class.forName(className).getConstructor().newInstance();
         }
         catch (final Exception ex)
         {
@@ -1032,14 +971,18 @@ public class Configuration
      *
      * @return the {@link FlowControlSupplier}.
      */
-    static FlowControlSupplier multicastFlowControlSupplier()
+    public static FlowControlSupplier multicastFlowControlSupplier()
     {
         FlowControlSupplier supplier = null;
         try
         {
-            supplier = (FlowControlSupplier)Class.forName(MULTICAST_FLOW_CONTROL_STRATEGY_SUPPLIER)
-                .getConstructor()
-                .newInstance();
+            final String className = getProperty(MULTICAST_FLOW_CONTROL_STRATEGY_SUPPLIER_PROP_NAME);
+            if (null == className)
+            {
+                return new DefaultMulticastFlowControlSupplier();
+            }
+
+            supplier = (FlowControlSupplier)Class.forName(className).getConstructor().newInstance();
         }
         catch (final Exception ex)
         {
@@ -1054,14 +997,18 @@ public class Configuration
      *
      * @return the {@link CongestionControlSupplier}
      */
-    static CongestionControlSupplier congestionControlSupplier()
+    public static CongestionControlSupplier congestionControlSupplier()
     {
         CongestionControlSupplier supplier = null;
         try
         {
-            supplier = (CongestionControlSupplier)Class.forName(CONGESTION_CONTROL_STRATEGY_SUPPLIER)
-                .getConstructor()
-                .newInstance();
+            final String className = getProperty(CONGESTION_CONTROL_STRATEGY_SUPPLIER_PROP_NAME);
+            if (null == className)
+            {
+                return new DefaultCongestionControlSupplier();
+            }
+
+            supplier = (CongestionControlSupplier)Class.forName(className).getConstructor().newInstance();
         }
         catch (final Exception ex)
         {
@@ -1077,7 +1024,7 @@ public class Configuration
      * @param initialWindowLength to be validated.
      * @param mtuLength           against which to validate.
      */
-    static void validateInitialWindowLength(final int initialWindowLength, final int mtuLength)
+    public static void validateInitialWindowLength(final int initialWindowLength, final int mtuLength)
     {
         if (mtuLength > initialWindowLength)
         {
@@ -1092,7 +1039,7 @@ public class Configuration
      * @param mtuLength to be validated.
      * @throws ConfigurationException if the MTU length is not valid.
      */
-    static void validateMtuLength(final int mtuLength)
+    public static void validateMtuLength(final int mtuLength)
     {
         if (mtuLength < DataHeaderFlyweight.HEADER_LENGTH || mtuLength > MAX_UDP_PAYLOAD_LENGTH)
         {
@@ -1112,7 +1059,7 @@ public class Configuration
      * @param timeoutNs to be validated.
      * @param driverLingerTimeoutNs set for the driver operation.
      */
-    static void validatePublicationLingerTimeoutNs(final long timeoutNs, final long driverLingerTimeoutNs)
+    public static void validatePublicationLingerTimeoutNs(final long timeoutNs, final long driverLingerTimeoutNs)
     {
         if (timeoutNs < driverLingerTimeoutNs)
         {
@@ -1126,7 +1073,7 @@ public class Configuration
      *
      * @param ctx to be validated.
      */
-    static void validateSocketBufferLengths(final MediaDriver.Context ctx)
+    public static void validateSocketBufferLengths(final MediaDriver.Context ctx)
     {
         try (DatagramChannel probe = DatagramChannel.open())
         {
@@ -1135,28 +1082,28 @@ public class Configuration
             probe.setOption(StandardSocketOptions.SO_SNDBUF, Integer.MAX_VALUE);
             final int maxSoSndBuf = probe.getOption(StandardSocketOptions.SO_SNDBUF);
 
-            if (maxSoSndBuf < SOCKET_SNDBUF_LENGTH)
+            if (maxSoSndBuf < ctx.socketSndbufLength())
             {
                 System.err.format(
                     "WARNING: Could not get desired SO_SNDBUF, adjust OS to allow %s: attempted=%d, actual=%d%n",
                     SOCKET_SNDBUF_LENGTH_PROP_NAME,
-                    SOCKET_SNDBUF_LENGTH,
+                    ctx.socketSndbufLength(),
                     maxSoSndBuf);
             }
 
             probe.setOption(StandardSocketOptions.SO_RCVBUF, Integer.MAX_VALUE);
             final int maxSoRcvBuf = probe.getOption(StandardSocketOptions.SO_RCVBUF);
 
-            if (maxSoRcvBuf < SOCKET_RCVBUF_LENGTH)
+            if (maxSoRcvBuf < ctx.socketRcvbufLength())
             {
                 System.err.format(
                     "WARNING: Could not get desired SO_RCVBUF, adjust OS to allow %s: attempted=%d, actual=%d%n",
                     SOCKET_RCVBUF_LENGTH_PROP_NAME,
-                    SOCKET_RCVBUF_LENGTH,
+                    ctx.socketRcvbufLength(),
                     maxSoRcvBuf);
             }
 
-            final int soSndBuf = 0 == SOCKET_SNDBUF_LENGTH ? defaultSoSndBuf : SOCKET_SNDBUF_LENGTH;
+            final int soSndBuf = 0 == ctx.socketSndbufLength() ? defaultSoSndBuf : ctx.socketSndbufLength();
 
             if (ctx.mtuLength() > soSndBuf)
             {
@@ -1186,7 +1133,7 @@ public class Configuration
      * @param pageSize to be checked.
      * @throws ConfigurationException if the size is not as expected.
      */
-    static void validatePageSize(final int pageSize)
+    public static void validatePageSize(final int pageSize)
     {
         if (pageSize < PAGE_MIN_SIZE)
         {
@@ -1204,5 +1151,23 @@ public class Configuration
         {
             throw new ConfigurationException("page size not a power of 2: " + pageSize);
         }
+    }
+
+    public static void validateSessionIdRange(final int low, final int high)
+    {
+        if (low > high)
+        {
+            throw new ConfigurationException("low session id value " + low + " must be <= high value " + high);
+        }
+
+        if (Math.abs((long)high - low) > Integer.MAX_VALUE)
+        {
+            throw new ConfigurationException("reserved range to too large");
+        }
+    }
+
+    public static int countersMetadataBufferLength(final int counterValuesBufferLength)
+    {
+        return counterValuesBufferLength * (CountersReader.METADATA_LENGTH / CountersReader.COUNTER_LENGTH);
     }
 }
